Replacing "DatatypeConverter" with a public domain base64 converter. Fixed bug with certificate/public key handling;